<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="applet_app_name">TmfAppletDemo</string>
    <string name="applet_add_server">添加服务器</string>
    <string name="applet_server_name">服务器名称</string>
    <string name="applet_server_config">请输入服务器配置信息</string>
    <string name="applet_server_save_config">保存配置</string>

    <string name="applet_mini_app_helper">TMF小程序助手</string>
    <string name="applet_common_use_app">常用小程序</string>
    <string name="applet_no_ava_mini_app">暂无可用小程序</string>

    <string name="applet_mini_app_list">小程序列表</string>
    <string name="applet_mini_browser_test">浏览器测试</string>
    <string name="applet_auto_inject_jssdk">是否自动注入jssdk</string>
    <string name="applet_base_split">基础库是否拆分</string>
    <string name="applet_domain_intercept">是否域名拦截</string>

    <string name="applet_add_listen">注册事件监听</string>
    <string name="applet_listen_callback">监听事件回调数据</string>
    <string name="applet_property_name">属性名称</string>
    <string name="applet_property_value">属性值</string>
    <string name="applet_get_property">属性获取</string>
    <string name="applet_set_property">属性设置</string>
    <string name="applet_debug_info">调试信息</string>
    <string name="applet_search_result">搜索结果</string>
    <string name="applet_search">搜索</string>
    <string name="applet_cancel">取消</string>
    <string name="applet_input_to_search">输入内容搜索小程序</string>
    <string name="applet_choose_below_or_select_rightr">请在下方列表选择或通过右上角新增</string>
    <string name="applet_tmf_public_cloud">TMF公有云环境</string>
    <string name="applet_input_appid">请输入APPID</string>
    <string name="applet_tmf_confirm">确定</string>
    <string name="applet_tmf_cancel">取消</string>
    <string name="applet_develop_version">开发版</string>

    <string name="applet_config_server">配置服务器</string>
    <string name="applet_input_username_yy">请输入运营平台用户名</string>
    <string name="applet_input_pwd_yy">请输入运营平台密码</string>
    <string name="applet_input_open_username">请输入开放平台用户名</string>
    <string name="applet_input_open_pwd">请输入开放平台密码</string>
    <string name="applet_login">登录</string>
    <string name="applet_login_app">APP账号登录</string>
    <string name="applet_skip_login">跳过登录</string>
    <string name="applet_current_yy">当前为运营账号</string>
    <string name="applet_switch_company_account">切换为企业账号登录</string>

    <string name="applet_content_can_not_be_empty">内容不能为空</string>
    <string name="applet_server_name_must_be">服务器名称必须2~10个字符</string>
    <string name="applet_config_already_exists">配置文件名已存在: %s</string>
    <string name="applet_config_must_be_json">配置文件内容必须是JSON格式 </string>

    <string name="applet_base_clean">清除小程序基础库 </string>
    <string name="applet_base_click_to_clean">点击清除已下载的小程序基础库 </string>
    <string name="applet_base_mini_test">小程序测试 </string>
    <string name="applet_base_click_to_test_page">点击进入小程序测试页面 </string>
    <!--    loginActivty-->
    <string name="applet_login_act_skip_login">跳过登录</string>
    <string name="applet_login_act_skip_login_tips">只能体验正式版(已上架)小程序\n开发和预览版小程序无法体验</string>
    <string name="applet_login_act_skip_login_confirm">确定</string>
    <string name="applet_login_act_skip_login_cancel">取消</string>
    <string name="applet_login_act_toast_input_open">请输入开放平台账号和密码</string>
    <string name="applet_login_act_skip_input_yy">请输入运营平台账号和密码</string>
    <string name="applet_login_act_logining">登录中</string>
    <string name="applet_login_act_tips">提示</string>
    <string name="applet_login_act_tips_detail">"账号说明(IDE二维码为开发版小程序)\n\n"
                                        "运营账号： 支持正式(已上架)、预览小程序\n\n"
                                        "开放平台账号： 支持正式(已上架)、预览、开发版小程序\n"</string>
    <string name="applet_login_remind_known">请悉知</string>
    <string name="applet_login_remind_login_failed">登录失败:%s</string>

    <string name="applet_login_platform">平台账号登录</string>
    <string name="applet_login_platform_id">请输入开发者/体验者 用户ID</string>

    <string name="applet_login_app_account">APP账号登录</string>
    <string name="applet_login_open_name_account">请输入开放平台用户名</string>

    <string name="applet_login_current_company">当前为企业账号</string>
    <string name="applet_login_current_yy">当前为运营账号</string>
    <string name="applet_login_switch_yy">切换为运营账号登录</string>
    <string name="applet_login_swith_company">切换为企业账号登录</string>
    <string name="applet_search_no_ava_mini">未搜索到可用小程序</string>
    <string name="applet_inner_app_config">APP内置配置</string>
    <string name="applet_save_success">保存成功</string>
    <string name="applet_restart_to_take_effective">需要重启APP才能生效</string>
    <string name="applet_restart_to_take_effective_delete">删除</string>
    <string name="applet_restart_to_take_effective_delete_config">是否删除配置文件</string>
    <!--mainActivity-->
    <string name="applet_main_act_delete">删除</string>
    <string name="applet_main_act_delete_msg">是否删除小程序 %1$s \n %2$s</string>
    <string name="applet_main_act_delete_msg_confirm">确定</string>
    <string name="applet_main_act_delete_msg_cancal">取消</string>
    <string-array name="applet_menu_item">
        <item> 扫一扫</item>
        <item> AppId搜索</item>
        <item> 设置</item>
        <item> 退出登录</item>
    </string-array>
    <string name="applet_mini_proxy_impl_other1">其他1</string>
    <string name="applet_mini_proxy_impl_other2">自定义分享</string>
    <string name="applet_mini_proxy_impl_float_app">浮窗</string>
    <string name="applet_mini_proxy_impl_out_of_effect">无效，id不属于区间[100,200]，不会显示在面板上</string>
    <string name="applet_mini_proxy_impl_cancel_top">取消置顶</string>
    <string name="applet_mini_proxy_impl_add_to_desktop">添加到桌面</string>
    <string name="applet_mini_proxy_impl_Qzone">QQ空间</string>
    <string name="applet_mini_proxy_impl_wechat_friend">微信好友</string>
    <string name="applet_mini_proxy_impl_wechat_group">微信朋友圈</string>
    <string name="applet_mini_proxy_impl_restart">重启小程序</string>
    <string name="applet_mini_proxy_impl_about">关于</string>
    <string name="applet_mini_proxy_impl_complain_and_report">举报</string>
    <string name="applet_mini_proxy_impl_deung">调试</string>
    <string name="applet_mini_proxy_impl_export_log">导出日志</string>
    <string name="applet_mini_proxy_impl_performance">性能</string>
    <string name="applet_mini_proxy_impl_move_top">置顶</string>

    <string name="applet_mini_data_country">中国</string>
    <string name="applet_mini_proxy_province">北京</string>
    <string name="applet_mini_proxy_city">北京</string>


</resources>
