<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
            android:fitsSystemWindows="true"
            android:background="@color/applet_color_primary"
            android:layout_width="match_parent"
            android:layout_height="56dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/applet_mini_app_list"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18sp"/>
    </androidx.appcompat.widget.Toolbar>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/applet_mini_browser_test"
            android:onClick="onTest"
            android:visibility="visible" />

    <Switch
            android:text="@string/applet_auto_inject_jssdk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch1"
            android:checked="false"/>

    <Switch
            android:text="@string/applet_base_split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch2"
            android:checked="false"/>

    <Switch
            android:text="@string/applet_domain_intercept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch3"
            android:checked="false"/>

    <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
    </ListView>

</LinearLayout>