<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_height="match_parent">
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="createInnerAudioContext"
            android:id="@+id/btn_audio_createInnerAudioContext"
            />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="play"
            android:id="@+id/btn_audio_InnerAudioContext_play"
            />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="pause"
            android:id="@+id/btn_audio_InnerAudioContext_pause"
            />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="seek"
            android:id="@+id/btn_audio_InnerAudioContext_seek"
            />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="destroy"
            android:id="@+id/btn_audio_InnerAudioContext_destroy"
            />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applet_add_listen"
            android:id="@+id/btn_audio_InnerAudioContext_regist"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_audio_state_listen"
            android:text="@string/applet_listen_callback"
            />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/applet_property_name"
            android:id="@+id/et_audio_InnerAudioContext_param_name"
            />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/applet_property_value"
            android:id="@+id/et_audio_InnerAudioContext_param_value"
            />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applet_get_property"
            android:id="@+id/btn_audio_InnerAudioContext_set"
            />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applet_set_property"
            android:id="@+id/btn_audio_InnerAudioContext_get"
            />
</LinearLayout>