<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/applet_shape_bottom_dialog"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingTop="50dp"
    android:paddingRight="15dp"
    android:paddingBottom="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
                android:id="@+id/appid_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/applet_input_appid"
            android:text=""/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appid_edit"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ok_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/applet_tmf_confirm" />

            <Button
                android:id="@+id/cencel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/applet_tmf_cancel" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>