<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/applet_color_primary">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <EditText
                android:id="@+id/search_edit"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/cancel_text"
                android:background="@drawable/applet_edittext_border"
                android:drawableStart="@mipmap/applet_ic_search_grey"
                android:hint="@string/applet_search"
                android:imeOptions="actionSearch"
                android:lines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true" />

            <TextView
                    android:id="@+id/cancel_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="15dp"
                    android:text="@string/applet_cancel"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/applet_search_result"
                    android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:layout_marginTop="10dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
            android:id="@+id/hint_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/c_7f646464"
            android:text="@string/applet_input_to_search" />
</LinearLayout>