<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/c_f2f2f2">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/applet_color_primary">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:id="@+id/back_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/applet_ic_back"
                    android:layout_centerVertical="true" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/applet_add_server"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            <ImageView
                    android:id="@+id/add_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/applet_ic_add"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:visibility="gone"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

        <EditText
                android:id="@+id/title_edit"
                style="@style/applet_edittext_border"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/applet_add_server" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

            <EditText
                    android:id="@+id/content_edit"
                    style="@style/applet_edittext_border"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:hint="@string/applet_server_config" />

            <Button
                    android:id="@+id/save_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:text="@string/applet_server_save_config" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


