<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/applet_color_primary">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:id="@+id/setting_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/applet_ic_setting"
                    android:layout_centerVertical="true"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/applet_mini_app_helper"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <ImageView
                    android:id="@+id/search_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/applet_ic_search"
                    android:layout_toStartOf="@+id/menu_img"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp" />

            <ImageView
                android:id="@+id/menu_img"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/applet_ic_menu" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/applet_common_use_app"
                    android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:layout_marginTop="10dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
            android:id="@+id/hint_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/applet_no_ava_mini_app"
            android:textColor="@color/c_7f646464"
            android:visibility="gone"/>
</LinearLayout>